responsivenes fixes fixed hero caption and sidebar overflow

--- a/src/index.css
+++ b/src/index.css
@@ -91,16 +91,15 @@ section {
   display: flex;
   justify-content: space-between;
   min-height: clamp(500px, 90vh, 800px);
+  position: relative;
+  overflow: hidden;
 }
 
 #heroImage {
   display: inline-block;
   transform-origin: top left;
   transform: scale(0.7);
-}
-
-#hero::after {
-  border-bottom: 100px solid #000000;
+  transition: transform 0.5s ease-in-out, filter 0.5s ease-in-out;
 }
 
 .image {
@@ -134,11 +133,14 @@ section {
   background-color: var(--accent-1);
 }
 #statistics > h1 {
-  padding-top: 1vw;
+  padding-top: 5%;
   font-size: 2.5rem;
   font-weight: 400;
   text-align: center;
 } /* later: change this to be uniform with all other section headers */
+.stats__card h1, .stats__card p {
+  text-align: center;
+}
 
 .statsParent {
   margin-top: 20px;
@@ -152,7 +154,6 @@ section {
   flex-basis: 300px;
   max-width: 400px;
   flex-grow: 1;
-
   min-height: 150px;
   display: flex;
   flex-direction: column;
@@ -169,12 +170,36 @@ section {
 .statsParent > div:hover {
   background-color: var(--bg-emphasis-color);
   color: var(--text-emphasis-color);
-  transform: scale(1.05); /* Optional: A subtle scaling effect */
+  transform: scale(1.05);
 }
 
+@media (max-width: 800px) {
+  #heroImage {
+    filter: blur(20px);
+  }
+}
 @media (max-width: 600px) {
+  #hero {
+    max-height: 100vh;
+  }
+  #heroImage {
+    position: absolute;
+    top: 0;
+    left: -10%;
+    transform: scale(0.7), translate(-50%, -50%);
+    z-index: 0;
+  }
+  .hero__caption .caption {
+    font-weight: 600;
+    font-size: 10vw;
+    line-height: 10vw;
+  }
+  .hero__caption p {
+    font-size: 6vw;
+    line-height: 9vw;
+    font-weight: 300;
+  }
   .statsParent > div {
-    flex-basis: 100%;
     max-width: 100%;
     border: none;
     /* box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); */
